@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/kanagram-4.7.4.ebuild,v 1.1 2011/12/11 18:52:13 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/kanagram-4.7.4.ebuild,v 1.2 2012/01/09 15:50:35 phajdan.jr Exp $
 
 EAPI=4
 
@@ -9,7 +9,7 @@ KDE_SCM="git"
 inherit kde4-base
 
 DESCRIPTION="KDE: letter order game."
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~ppc ~ppc64 x86 ~amd64-linux ~x86-linux"
 IUSE="debug"
 
 DEPEND="
