@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kanagram
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.169 2011/12/18 19:46:17 dilfridge Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.170 2012/01/09 15:50:35 phajdan.jr Exp $
+
+  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> kanagram-4.7.4.ebuild:
+  x86 stable wrt bug #396359
 
   18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -kanagram-4.6.5.ebuild:
